<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/edt_email_sigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:padding="20dp" />

    <EditText
        android:id="@+id/edt_password_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email_sigin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:padding="20dp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/signin"
        android:layout_below="@+id/edt_password_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout

        android:gravity="center"
        android:padding="20dp"
        android:layout_below="@id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signin_tip"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signup"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#0E4DCD"/>

    </LinearLayout>

</RelativeLayout>