<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/email_auth_sign_up"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:padding="20dp" />

    <EditText
        android:id="@+id/password_auth_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_auth_sign_up"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="20dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/signup"
        android:layout_below="@+id/password_auth_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_signup_teacher"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/signup_teacher"
        android:layout_below="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>